# contribution-showcase

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  showcase.example.toml
.github/workflows/: build-test-audit-coverage.yml  build-test-audit.yml  pages.yml  release.yml
docs/: contribution-showcase.html
openspec/changes/config-init-and-example-template/: design.md  proposal.md  tasks.md
openspec/changes/dynamic-bar-width/: design.md  proposal.md  tasks.md
openspec/changes/enhance-ci-coverage-and-quality/: proposal.md
openspec/changes/layout-reorder-and-test-slide/: design.md  tasks.md
openspec/changes/lines-charts-and-type-floor/: proposal.md  tasks.md
openspec/changes/premium-showcase-redesign/: design.md  tasks.md
openspec/changes/safety-hardening/: design.md  tasks.md
openspec/changes/table-polish-and-commit-filter/: design.md  tasks.md
openspec/changes/ui-and-output-improvements/: design.md  proposal.md
openspec/changes/wiki-docs-override/: design.md  proposal.md  tasks.md
openspec/specs/adaptive-timeline-granularity/: spec.md
openspec/specs/ci-code-coverage/: spec.md
openspec/specs/ci-release-pipeline/: spec.md
openspec/specs/ci-release-smoke-test/: spec.md
openspec/specs/ci-test-pipeline/: spec.md
openspec/specs/config-init-command/: spec.md
openspec/specs/conventional-commit-parser/: spec.md
openspec/specs/dynamic-output-filename/: spec.md
openspec/specs/git-log-collection/: spec.md
skills/openspec-archive-change/: SKILL.md
src/: collector.rs  config.rs  main.rs  model.rs
templates/: page.html
(+115 files in other folders)
